Fixed width issue
Fixed the issue where the page was slightly too wide and required a
scroll bar

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -89,6 +89,7 @@ input {
   background-color:transparent;
   border-color: transparent;
   color: transparent;
+  width: 100%;
 }
 
 .home-h1{
